--- a/src/app/user/login.component.html
+++ b/src/app/user/login.component.html
@@ -5,9 +5,14 @@
     #loginForm="ngForm"
     (ngSubmit)="login(loginForm.value)"
     autocomplete="off"
+    novalidate
   >
     <div class="form-group">
       <label for="userName">User Name:</label>
+      <em
+        *ngIf="loginForm.controls?.['userName']?.invalid && (loginForm.controls?.['userName']?.touched || mouseoverLogin)"
+        >Required</em
+      >
       <input
         (ngModel)="(userName)"
         name="userName"
@@ -15,10 +20,15 @@
         type="text"
         class="form-control"
         placeholder="User Name..."
+        required
       />
     </div>
     <div class="form-group">
       <label for="password">Password:</label>
+      <em
+        *ngIf="loginForm.controls?.['password']?.invalid && (loginForm.controls?.['password']?.touched || mouseoverLogin)"
+        >Required</em
+      >
       <input
         (ngModel)="(password)"
         name="password"
@@ -26,10 +36,22 @@
         type="password"
         class="form-control"
         placeholder="Password..."
+        required
       />
     </div>
 
-    <button type="submit" class="btn btn-primary">Login</button>
+    <span
+      (mouseenter)="mouseoverLogin = true"
+      (mouseleave)="mouseoverLogin = false"
+    >
+      <button
+        type="submit"
+        [disabled]="loginForm.invalid"
+        class="btn btn-primary"
+      >
+        Login
+      </button>
+    </span>
     <button type="button" (click)="cancel()" class="btn btn-default">
       Cancel
     </button>
