--- a/src/app/nav/nav-bar.component.html
+++ b/src/app/nav/nav-bar.component.html
@@ -38,7 +38,7 @@
               >Login</a
             >
             <a *ngIf="auth.isAuthernticated()" [routerLink]="['user/profile']"
-              >Welcome {{ auth.currentUser?.userName }}</a
+              >Welcome {{ auth.currentUser.firstName }}</a
             >
           </li>
         </ul>
