--- a/src/app/user/profile.component.html
+++ b/src/app/user/profile.component.html
@@ -15,7 +15,18 @@
         }"
       >
         <label for="firstName">First Name:</label>
-        <em *ngIf="!validateFirstName()">Required</em>
+        <em
+          *ngIf="
+            !validateFirstName() && myGroup.controls?.['firstName']?.errors?.['required']
+          "
+          >Required</em
+        >
+        <em
+          *ngIf="
+            !validateFirstName() && myGroup.controls?.['firstName']?.errors?.['pattern']
+          "
+          >Must start with a letter</em
+        >
         <input
           formControlName="firstName"
           id="firstName"
